# pluma-plugins

./: Makefile.am  README.md  configure.ac  pluma-plugins.doap
help/: Makefile.am
help/C/: bookmarks.page
plugins/: Makefile.am
plugins/bookmarks/: Makefile.am  pluma-bookmarks-plugin.c  pluma-bookmarks-plugin.h
plugins/codecomment/: Makefile.am  codecomment.plugin.desktop.in.in  pluma-codecomment.metainfo.xml.in
plugins/synctex/: Makefile.am  pluma-synctex.metainfo.xml.in  synctex.plugin.desktop.in.in
plugins/terminal/: Makefile.am  org.mate.pluma.plugins.terminal.gschema.xml  pluma-terminal.metainfo.xml.in  terminal.plugin.desktop.in.in
po/: POTFILES.in  POTFILES.skip
